Add more closed window checks

The stack contains closed windows, so we need to guard against them.

BUG: 475423